@@ -8,6 +8,8 @@
  - CMake build now filters `config-compiler.h`, like the autoconfig build does.
  - No longer generate `config-autotools.h`.
  - Build fix for MSVC 2026. (#1160)
+ - Deprecated `extract_version.sh`; use `extract_version.py`.
+ - Rewrote header/binary version compatibility check.
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
  - Requires PostgreSQL 11 or better.
